After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738002 - fix language chooser response
fix language chooser response
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Ondrej Holy
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-06 12:57 UTC by Ondrej Holy
Modified: 2014-10-07 10:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix language chooser response (1.31 KB, patch)
2014-10-06 12:57 UTC, Ondrej Holy
committed Details | Review
preset language chooser if language is known (3.24 KB, patch)
2014-10-07 09:02 UTC, Ondrej Holy
committed Details | Review
fix language chooser response if language is unknown (1.85 KB, patch)
2014-10-07 09:04 UTC, Ondrej Holy
committed Details | Review

Description Ondrej Holy 2014-10-06 12:57:44 UTC
Created attachment 287847 [details] [review]
fix language chooser response

If the language chooser is confirmed and no language is selected, "Other..." is shown as user's language and the following error is printed:

(gnome-control-center:14608): AccountsService-CRITICAL **: act_user_set_language: assertion 'language != NULL' failed
Comment 1 Rui Matos 2014-10-06 15:16:06 UTC
Review of attachment 287847 [details] [review]:

Looks fine. Can you do the same for the region panel too ?
Comment 2 Rui Matos 2014-10-06 15:20:44 UTC
(In reply to comment #1)
> Can you do the same for the region panel too ?

I wasn't clear. Feel free to push the same fix to the region panel without review :-)
Comment 3 Ondrej Holy 2014-10-07 09:01:50 UTC
It seems to me region panel doesn't have such problems, because the language chooser is always preset by a current (or system, or default) language.
Comment 4 Ondrej Holy 2014-10-07 09:02:43 UTC
Created attachment 287934 [details] [review]
preset language chooser if language is known

Preset the language chooser similary as it is done in the region panel. Also remove one goto command and share code.
Comment 5 Ondrej Holy 2014-10-07 09:04:00 UTC
Created attachment 287935 [details] [review]
fix language chooser response if language is unknown

There is another one crasher. If language is unknown and language chooser is cancelled, panel crash with the following error:
    
(gnome-control-center:24952): Gtk-CRITICAL **: gtk_list_store_get_path: assertion 'iter->stamp == priv->stamp' failed
    
(gnome-control-center:24952): Gtk-CRITICAL **: gtk_list_store_get_value: assertion 'iter_is_valid (iter, list_store)' failed
    
(gnome-control-center:24952): GLib-GObject-WARNING **: gtype.c:4221: type id '0' is invalid
    
(gnome-control-center:24952): GLib-GObject-WARNING **: can't peek value table for type '<invalid>' which is not currently referenced
Segmentation fault (core dumped)
Comment 6 Rui Matos 2014-10-07 09:59:27 UTC
Review of attachment 287934 [details] [review]:

Right, this looks better
Comment 7 Rui Matos 2014-10-07 10:03:48 UTC
Review of attachment 287935 [details] [review]:

++
Comment 8 Ondrej Holy 2014-10-07 10:13:54 UTC
Comment on attachment 287847 [details] [review]
fix language chooser response

commit 6f13d0ad8b71b0c49593b87bfa7b7066e9aa32f6
Comment 9 Ondrej Holy 2014-10-07 10:14:17 UTC
Comment on attachment 287934 [details] [review]
preset language chooser if language is known

commit 6b3b223668a8a86d3264a86d78f2c790a9e5f648
Comment 10 Ondrej Holy 2014-10-07 10:15:00 UTC
Comment on attachment 287935 [details] [review]
fix language chooser response if language is unknown

commit 4c6ef8568db72455838625c1aed31b50772ab875
Comment 11 Ondrej Holy 2014-10-07 10:16:29 UTC
Thanks for the reviews :-)