user-accounts: preset language chooser if language is known

Preset the language chooser similary as it is done in the region panel.
Also remove one goto command and share code.

https://bugzilla.gnome.org/show_bug.cgi?id=738002